utils/styles/main.scss
/* ... */
.form-control {
  padding: 1rem;
  height: inherit;
  border: none;
  font-family: $navbar-font, 'Font Awesome 5 Free';
  font-size: 0.875rem;
  line-height: normal;
}

.select__control {
  border: none !important;
  border-radius: 50rem !important;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
  padding: 0.6rem;
  &:hover {
    border: none !important;
  }

  &:focus {
    border: none !important;
  }
}

.select__menu {
  scrollbar-width: 1px;
  margin-top: 0;
  padding: 1rem 0.3rem;
  border-radius: 2rem !important;
  border-bottom-left-radius: 2rem !important;
  border-bottom-right-radius: 2rem !important;

  .select__menu-list {
    &::-webkit-scrollbar {
      width: 2px;
    }

    &::-webkit-scrollbar-thumb {
      background: #9e9e9e;
      border-radius: 10px;
    }
  }
}

#departments {
  .departments {
    padding-top: 5rem;
    padding-bottom: 5rem;
    @media screen and (max-width: 576px) {
      .header {
        font-size: 2.25rem;
      }
      .head {
        font-size: 1.5rem;
      }
    }
    .header-heigh {
      color: $green-light;
    }
  }
  .card-columns {
    column-count: 2;
    column-gap: 2.5rem;
    @media screen and (max-width: $sm-break) {
      column-count: 1;
      column-gap: 1rem;
    }
    .card {
      border: none;
      border-radius: $border-xl;
      padding: 1.5rem 2rem;
      min-height: 15rem;
      margin-bottom: 1.875rem;
      position: relative;
      text-decoration: none;

      &.highlight {
        height: 32rem;
        // margin-bottom: 1.25rem;
        @media screen and (max-width: 576px) {
          height: 15rem;
          .header {
            height: 20rem;
          }
        }

        .card-body {
          position: absolute;
          bottom: 0;
        }
      }

      .header {
        max-width: 384px;
        // font-size: 2.6rem;
      }
      @media screen and (max-width: $md-break) {
        .header {
          font-size: $font-m;
        }
      }

      .sub-head {
        font-family: $navbar-font;
        font-size: $font-m;
      }
    }

    .department0 {
      background-color: #00aa13;
    }
    .department1 {
      background-color: #ff7f32;
    }
    .department2 {
      background-color: #ff808b;
    }
    .department3 {
      background-color: #7ccc6c;
    }
    .department4 {
      background-color: #d48bc8;
    }
    .department5 {
      background-color: #32ebe1;
    }
  }
}

#teams {
  .card {
    min-height: 20rem;
    border: none;
    outline: none !important;
    border-radius: $border-xl;
    min-height: 430px;
  }

  .slick-next {
    right: 3.2rem;
  }

  .locationPadding {
    color: #515151;
  }
  @media screen and (max-width: 576px) {
    min-height: auto;
    .slick-next,
    .slick-prev {
      display: none !important;
    }
    .slick-list {
      padding-left: 30px !important;
    }
  }
  @media screen and (min-width: $lg-break) {
    .slick-prev {
      display: none !important;
    }
  }

  @media screen and (min-width: $xl-break) {
    .slick-slider {
      margin-left: 16rem;
    }
    .slick-list {
      padding-right: 100px !important;
      padding-left: 0px !important;
    }
  }

  @media screen and (min-width: 2000px) {
    .slick-slider {
      width: 1140px;
      margin: auto;
    }
  }
}

.teams-banner {
  .heading {
    font-size: 30px;
  }
}

.team-blogs {
  .slick-next,
  .slick-prev {
    display: none !important;
  }
}

#blogs,
#stories,
#openingsBlogs {
  .list {
    padding-top: 7rem;
  }
  .card {
    border: none;

    .placeholder {
      min-height: 13rem;
      background-color: #dcdada;
      border: 1px sold #eee;
      border-radius: $border-xl;
      background-size: cover;
      background-position: center center;
    }

    .card-name {
      // font-size: 1.125rem;
      line-height: 28px;
    }
  }
}

#funding {
  @media screen and (min-width: $lg-break) {
    background-repeat: no-repeat;
    background-position: left;
    background: linear-gradient(to right, #f7ce55 40%, #f7ce55 40%, #fff 0%, #fff 65%, #fff 65%);
  }
}

// Slick Slider
.slick-next:before,
.slick-prev:before {
  font-family: 'Font Awesome\ 5 Free';
  font-weight: 900;
  font-size: 2.5rem;
  color: #404040;
}

.slick-prev:before {
  content: '\f053';
}

.slick-next:before {
  content: '\f054';
}

// .slick-prev {
//   left: -10px;
//   z-index: 1;
// }

// .slick-next {
//   right: -10px;
//   z-index: 1;
// }

.product-wrapper {
  @media screen and (min-width: $lg-break) {
    .slick-prev {
      left: -50px;
    }

    .slick-next {
      right: -50px;
    }
  }
}

// .slick-dots {
//   display: flex !important;
//   justify-content: space-around;
//   @media screen and (max-width: $lg-break) {
//     flex-wrap: wrap;
//     margin-bottom: -2rem;
//   }

//   li {
//     min-width: 9rem;
//     color: #fff;
//     font-weight: normal;
//   }
//   .slick-active {
//     opacity: 1;
//     font-family: $title-font;

//     &:after {
//       content: '';
//       display: block;
//       width: 25%;
//       margin: 0.5rem auto;
//       border-bottom: 1px solid #fff;
//     }
//   }
// }

#impact-stories-carousel {
  .carousel-indicators {
    margin: 0;
    bottom: -4rem;

    li {
      flex: 1 1 auto;
    }
  }
}

// Jobs Css

.bg-careers {
  background-image: linear-gradient(to top, rgba(255, 255, 255, 0), #e18700);
}
.job {
  thead {
    border-bottom: 1px solid #979797;
  }
  th,
  .view-jobs {
    font-family: $header-font;
  }
  @media screen and (max-width: $md-break) {
    .tableHeading {
      display: none;
    }
  }
}

.xsSection {
  .banner-head {
    font-size: 2.25rem;
  }
  .heart {
    color: #38bb38;
  }
}

.careers {
  margin-top: 96px;

  @media screen and (max-width: 576px) {
    margin-top: 56px;
  }

  #job-list {
    @media screen and (max-width: 576px) {
      background-color: #fff;
    }
  }
}

.listings {
  box-shadow: 0 0 82px 0 rgba(0, 0, 0, 0.12);

  .header {
    font-size: 2rem;
  }
}
/* ... */

